--- a/synca_contract/Clarinet.toml
+++ b/synca_contract/Clarinet.toml
@@ -30,6 +30,11 @@ path = 'contracts/event_emitting_storage.clar'
 clarity_version = 2
 epoch = 2.5
 
+[contracts.file_registry]
+path = 'contracts/file_registry.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.research]
 path = 'contracts/research.clar'
 clarity_version = 2
